--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Autobuild
 on: [push, pull_request]
 
 env:
-  NeosPath: "${{ github.workspace }}/neos_install/"
+  NeosDirectory: "${{ github.workspace }}/neos_install/"
 permissions:
   contents: write
 jobs:
