--- a/Interface/QuestProModule.csproj
+++ b/Interface/QuestProModule.csproj
@@ -44,5 +44,9 @@
       <Private>False</Private>
     </Reference>
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+  </ItemGroup>
   
 </Project>
